fix 100vh on mobile

--- a/style.css
+++ b/style.css
@@ -4,8 +4,15 @@ body {
   flex-direction: column;
   justify-content: space-between;
 
-  min-height: 100vh;
   margin: 0;
+  min-height: 100vh;
+  /* fix mobile 100vh */
+  min-height: -webkit-fill-available;
+}
+
+html {
+  /* fix mobile 100vh */
+  height: -webkit-fill-available;
 }
 
 .main{
